# jovoco

./: .gitignore  pyproject.toml  rxconfig.py
.github/workflows/: pr.yml
jovoco/: jovoco.py
jovoco/utils/database/: connection.py  database.py
jovoco/utils/database/pipeline/: runner.py
jovoco/utils/database/pipeline/bronze/: loader.py  models.py
jovoco/utils/database/pipeline/gold/: builder.py  models.py
jovoco/utils/database/pipeline/silver/: models.py  transformer.py
