[project]
name = "jovoco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "reflex>=0.8.28.post1",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",
]
